Ignore rules for Netbeans

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 #################
+## NetNeans
+#################
+
+*.class
+build/*
+dist/*
+
+#################
 ## Eclipse
 #################
 
